[workspace]
members = [
    "mos-core",
    "mos-cli",
    "mos-sdk",
    "mos-macros"
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }

# Async and gRPC
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1.17"
tonic = "0.14.2"
prost = "0.14.1"
tonic-prost = "0.14.2"
tonic-prost-build = "0.14.2"
async-trait = "0.1.89"
async-stream = "0.3.6"
# CLI
clap = { version = "4.5.48", features = ["derive"] }
chrono = "0.4.42"

# Error Handling & Logging
anyhow = "1.0.100"
log = "0.4.28"
env_logger = "0.11.8"
thiserror = "2.0.17"
toml = "0.8.13"

# WASM Runtime lock
wasmtime = "29.0.1"
wasmtime-wasi = "29.0.1"

# Macros
syn = { version = "2.0.106", features = ["full"] }
quote = "1.0.41"

# Workspace members (for path dependencies)
mos-core = { path = "mos-core", default-features = false }
