[package]
name = "mos-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
mos-viz-agent = { path = "../mos-viz-agent" }
log = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tonic-prost = { workspace = true }
anyhow = { workspace = true }
env_logger = { workspace = true }
tokio-stream = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }
hyper-util = { workspace = true }
serde = { workspace = true }
tower = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }
